--- a/Content-Creation-Stack/React/ccs.html
+++ b/Content-Creation-Stack/React/ccs.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/foundation/foundation.css" type="text/css" />
+    <link rel="stylesheet" href="css/foundation.min.css" type="text/css" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
     <script src="js/jquery/jquery.js"></script>
     <script src="js/react/react.js"></script>
     <script src="js/react/JSXTransformer.js"></script>
     <script type="text/jsx" src="js/event-form.js"></script>
-    <script type="text/jsx" src="js/event-list.js"></script>
-
   </head>
   <body>
     <div id="eventList"></div>
