need to add click

--- a/Content-Creation-Stack/React/events.html
+++ b/Content-Creation-Stack/React/events.html
@@ -11,7 +11,9 @@
 
   </head>
   <body>
-    <div id="eventList"></div>
-    <div id="eventForm"></div>
+  <div class="row">
+    <div id="eventList" class="small-2 columns"></div>
+    <div id="eventForm" class="small-6 small-centered columns"></div>
+  </div>
   </body>
 </html>
