added directories for flux

--- a/Content-Creation-Stack/Event-Creator/events.html
+++ b/Content-Creation-Stack/Event-Creator/events.html
@@ -8,12 +8,16 @@
     <script src="js/react/JSXTransformer.js"></script>
     <script type="text/jsx" src="js/event-form.js"></script>
     <script type="text/jsx" src="js/event-list.js"></script>
+    <script type="text/jsx" src="js/events-box.js"></script>
+
 
   </head>
   <body>
+  <div class = "row">
+      <div id="eventsBox"></div>
+  </div>
   <div class="row">
-    <div id="eventList" class="small-2 columns"></div>
-    <div id="eventForm" class="small-6 small-centered columns"></div>
+        <div id="eventForm" class="small-6 small-centered columns"></div>
   </div>
   </body>
 </html>
